src/infoBox/InfoBox.css
.InfoBox__container {
    position: absolute;
    left: 0px;
    width: 100%;
    height: 250px;
    white-space: nowrap;
}

.InfoBox__top {
    top: 0px;
}

.InfoBox__bottom {
    bottom: 0px;
}

.InfoBox__tab {
    height: 250px;
    position: relative;
    top: 0px;
    left: 0px;
    display: inline-block;
    color: white;
    text-align: center;
    overflow: hidden;
}

.InfoBox__tabHeader {
    height: 250px;
    cursor: pointer;
}

.InfoBox__tabHeaderGeneric {
    width: 100px;
    background-position: calc(50%);
    position: absolute;
    left: 0px;
    top: 0px;
}


.InfoBox__tabImage {
    width: 100%;
    margin-top: 75px;
    align-items: center;
}

.InfoDetails__container {
    width: 250px;
    transition: width ease-in-out 0.2s;
}

.InfoBox__focus.InfoDetails__container {
    width: calc(100% - 300px) !important;
}

/** The details tab */
.InfoDetails__token {
    width: 200px;
    height: 200px;
    position: absolute;
    left: 25px;
    top: 50%;
    transform: translateY(-50%);
    vertical-align: center;
    overflow: hidden;
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 100%;
    transition: width ease-in-out 0.5s,
        height ease-in-out 0.5s,
        left ease-in-out 0.5s;
}

.InfoBox__focus .InfoDetails__token {
    left: 0px;
    width: 250px;
    height: 250px;
}

.InfoDetails__tokenMask {
    position: absolute;
    top: 0px;
    left: 25px;
    height: 200px;
    width: 200px;
    pointer-events: none;
    background-color: black;
    opacity: 0.5;
    border-radius: 100%;
    transition: width ease-in-out 0.5s, height ease-in-out 0.5s, left ease-in-out 0.5s
}

.InfoBox__focus .InfoDetails__tokenMask {
    left: 0px;
    width: 250px;
    height: 250px;
}

.InfoDetails__visibilityIndicator {
    position: absolute;
    top: 0px;
    left: 25px;
    height: 200px;
    width: 200px;
    pointer-events: none;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 60%;
    border-radius: 100%;
    transition: width ease-in-out 0.5s, height ease-in-out 0.5s, left ease-in-out 0.5s
}

.InfoBox__focus .InfoDetails__visibilityIndicator {
    left: 0px;
    width: 250px;
    height: 250px;
}

.InfoDetails__tokenName {
    position: absolute;
    bottom: 20px;
    display: block;
    color: rgb(192, 72, 72);
    font-size: 20pt;
    font-family: PiratesBay monospace;
    width: 250px;
    text-align: center;
    transition: bottom ease-in-out 0.5s;
}

.InfoBox__focus .InfoDetails__tokenName {
    bottom: -30px;
}

.InfoDetails__content {
    position: absolute;
    top: 0px;
    left: 260px;
    height: 100%;
    width: calc(100% - 265px);
}

.InfoDetails__roleName {
    height: 100px;
    position: absolute;
    top: 0px;
    left: 0px;
    color: rgb(211, 211, 211);
    font-size: 50pt;
    font-family: PiratesBay monospace;
}

.InfoDetails__playerName {
    position: absolute;
    top: 70px;
    left: 30px;
    color: rgb(192, 72, 72);
    font-size: 17pt;
    font-family: PiratesBay monospace;
}

.InfoDetails__ability {
    position: absolute;
    width: calc(100vw - 600px);
    top: 95px;
    left: 15px;
    color: darkgrey;
    font-size: 24pt;
    font-family: PiratesBay monospace;
    overflow-wrap: break-word;
    white-space: normal;
    text-align: left;
}

.InfoDetails__flavor {
    position: absolute;
    width: calc(100vw - 600px);
    top: 180px;
    left: 15px;
    font-size: 12pt;
    font-style: italic;
    font-family: PiratesBay monospace;
    overflow-wrap: break-word;
    white-space: normal;
    text-align: left;
}


/** The reminders tab */
.InfoReminders__container {
    width: 100px;
    transition: width ease-in-out 0.2s;
    overflow: visible;
}

.InfoBox__focus.InfoReminders__container {
    width: calc(100% - 450px);
}

.InfoReminders__content {
    position: absolute;
    top: 0px;
    left: 100px;
    height: 220;
    width: calc(100vw - 595px);
    text-align: left;
    overflow-wrap: break-word;
    white-space: normal;
    margin: 15px;
}

.InfoReminders__staticReminder {
    display:inline-block; 
    width: 100px; 
    height: 100px; 
    background-position: left; 
    background-repeat: no-repeat; 
    background-size: contain; 
    margin: 5px; 
    border-radius: 5px;
    position: relative;
    text-align: center;
}

.InfoReminders__staticReminder .Reminder__text {
    /* A kludge because I can't figure out percentage-based measurement */
    font-size: 20px;
}

.InfoReminders__dynamicReminder {
    top: 0;
    object-fit: contain;

    height: 100px;
    width: 100px;
    border-radius: 100%;
            
    display: flex; /* Use flexbox for centering */
    align-items: center; /* Center vertically */
    justify-content: center; /* Center horizontally */
    text-align: center; /* Center text */
    box-sizing: border-box; /* Include padding in width/height */
}

.InfoReminders__dynamicReminder .Reminder__text {
    /* A kludge because I can't figure out percentage-based measurement */
    font-size: 20px;
}

/** The cards tab */
.InfoCards__container {
    width: 100px;
    transition: width ease-in-out 0.2s;
}

.InfoBox__focus.InfoCards__container {
    width: calc(100% - 450px);
}

.InfoCards__content {
    display: grid;
    grid-template-columns: 50% 50%;
    position: absolute;
    top: 0px;
    left: 100px;
    height: 100%;
    width: calc(100vw - 625px);
    text-align: center;
    overflow-wrap: break-word;
    white-space: normal;
    margin: 0px 30px 0px 30px;
    overflow-y: scroll;
    scrollbar-width: none;
}

.InfoCards__content::-webkit-scrollbar {
    display: none;
}

.InfoCards__item {
    width: calc(100% - 5px);
    height: 80px;
    background-size: 100% 100%;
    margin: 5px;
    cursor: pointer;
    color: white;
    font-family: PiratesBay monospace;
    text-align: center;
    position: relative;
}

.InfoCards__itemTitle {
    font-size: 30pt;
    position: absolute;
    top: calc(50% - 20pt);
    left: 0px;
    width: 100%;
}

/** The powers tab */
.InfoPowers__container {
    width: 100px;
    transition: width ease-in-out 0.2s;
}

.InfoBox__focus.InfoPowers__container {
    width: calc(100% - 450px);
}

.InfoPowers__content {
    position: absolute;
    top: 0px;
    left: 100px;
    height: 190px;
    width: calc(100vw - 625px);
    text-align: center;
    overflow-wrap: break-word;
    white-space: normal;
    margin: 30px;
}

.InfoPowers__nameLabel {
    color: rgb(175, 175, 175);
    font-size: 20pt;
    font-family: PiratesBay monospace;
}

.InfoPowers__nameInput {
    height: 40px;
    width: 100%;
    color: black;
    font-size: 20pt;
    background-color: #afafaf;
    font-family: PiratesBay monospace;
}

/** Their container has these properties.  */
.InfoPowers__optionsContainer {
    width: 100%;
    height: 50%;
}

/** All <div>s have this */
.InfoPowers__option {
    display: inline-block;
    width: 80px;
    height: 80px;
    background-position: left;
    background-repeat: no-repeat;
    background-size: contain;
    margin: 5px;
    border-radius: 5px;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
}

/** */
.AlignmentButton__image {
    width: 60px;
    height: 60px;
    padding: 12px;
    background-position: center;
    transition: all 0.3s ease-in-out;
}

